logs/mechanic-gen.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mechanic'...
Listing './lib/python3.5/site-packages/mechanic/mechanic'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static/css'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static/css/lib'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static/css/lib/swagger'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static/js'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static/js/lib'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/static/js/lib/swagger'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/app/templates'...
Listing './lib/python3.5/site-packages/mechanic/mechanic/base'...
Compiling './lib/python3.5/site-packages/mechanic/mechanic/base/controllers.py'...
***   File "./lib/python3.5/site-packages/mechanic/mechanic/base/controllers.py", line 11
    import {{ app_name }}
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanic/mechanic/base/models.py'...
***   File "./lib/python3.5/site-packages/mechanic/mechanic/base/models.py", line 5
    from {{ app_name }} import db
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanic/mechanic/base/schemas.py'...
***   File "./lib/python3.5/site-packages/mechanic/mechanic/base/schemas.py", line 3
    from {{ app_name}} import ma, db
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanic/mechanic/run.py'...
***   File "./lib/python3.5/site-packages/mechanic/mechanic/run.py", line 1
    from {{ app_name }} import create_app
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mechanic/mechanic/utils'...
Compiling './lib/python3.5/site-packages/mechanic/mechanic/utils/db_helper.py'...
***   File "./lib/python3.5/site-packages/mechanic/mechanic/utils/db_helper.py", line 4
    import {{ app_name }}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mechanic/src'...
Listing './lib/python3.5/site-packages/mechanic/templates'...
Listing './lib/python3.5/site-packages/mechanic/tests'...
Listing './lib/python3.5/site-packages/mechanic/tests/gen'...
Listing './lib/python3.5/site-packages/mechanic/tests/specs'...
Listing './lib/python3.5/site-packages/mechanic_gen-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yamlordereddictloader-0.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
